Update poem text in index.html

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ audio{width:90%}
   <img src="img/corazon-negro.png" alt="corazón negro roto">
 
   <div class="poem">
-    No canto para gustar.<br>
-    <span>Canto para no romperme.</span><br><br>
+    No escribo para gustar.<br>
+    <span>escribo para no romperme.</span><br><br>
     Cada pista sangra lo que callo.
   </div>
 
