--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <title>URU · Portal</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel="stylesheet" href="style.css">
+</head>
 <style>
 :root{
   --bg:#000;
