Add new audio items 'sir' and 'ser' to index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <div class="item audio" data-src="audio/premi.mp3">Premi</div>
   <div class="item audio" data-src="audio/rune.mp3">Rune</div>
   <div class="item audio" data-src="audio/wera.mp3">Wera</div>
-
+  <div class="item audio" data-src="audio/wera.mp3">sir</div>
+  <div class="item audio" data-src="audio/wera.mp3">ser</div>
+  
   <div class="section">🎥 VIDEOS</div>
   <div class="item video" data-src="videos/ami.mp4">Ami</div>
   <div class="item video" data-src="videos/caminar.mp4">Caminar</div>
