--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <div class="item audio" data-src="audio/wera.mp3">Wera</div>
   <div class="item audio" data-src="audio/wera.mp3">sir</div>
   <div class="item audio" data-src="audio/wera.mp3">ser</div>
+  <div class="item audio" data-src="audio/wera.mp3">sar</div>
   
   <div class="section">🎥 VIDEOS</div>
   <div class="item video" data-src="videos/ami.mp4">Ami</div>
