--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
   <div class="item audio" data-src="audio/premi.mp3">Premi</div>
   <div class="item audio" data-src="audio/rune.mp3">Rune</div>
   <div class="item audio" data-src="audio/wera.mp3">Wera</div>
-  <div class="item audio" data-src="audio/wera.mp3">sir</div>
-  <div class="item audio" data-src="audio/wera.mp3">ser</div>
-  <div class="item audio" data-src="audio/wera.mp3">sar</div>
-  <div class="item audio" data-src="audio/wera.mp3">vida</div>
-  <div class="item audio" data-src="audio/wera.mp3">elladecia</div>
-  <div class="item audio" data-src="audio/wera.mp3">eres</div>
-  
+  <div class="item audio" data-src="audio/sir.mp3">sir</div>
+  <div class="item audio" data-src="audio/ser.mp3">ser</div>
+  <div class="item audio" data-src="audio/sar.mp3">sar</div>
+  <div class="item audio" data-src="audio/vida.mp3">vida</div>
+ 
   <div class="section">🎥 VIDEOS</div>
   <div class="item video" data-src="videos/ami.mp4">Ami</div>
   <div class="item video" data-src="videos/caminar.mp4">Caminar</div>
