--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- MENSAJES -->
 <aside class="soul">
-  <img src="img/corazon-negro.png" alt="corazón negro roto">
+  <img src="img/corazon-negro.png" alt="VVD">
 
   <div class="poem">
     No escribo para gustar.<br>
