--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <div class="item video" data-src="videos/envidi.mp4">Envidi</div>
   <div class="item video" data-src="videos/mejura.mp4">Mejura</div>
   <div class="item video" data-src="videos/song.mp4">Song</div>
+  <div class="item video" data-src="videos/leon.mp4">leon</div>
+  <div class="item video" data-src="videos/miedos.mp4">miedos</div>
+  <div class="item video" data-src="videos/tranqui.mp4">tranqui</div>
 </aside>
 
 <!-- PLAYER -->
