--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
   <div class="item video" data-src="videos/song.mp4">Song</div>
   <div class="item video" data-src="videos/leon.mp4">leon</div>
   <div class="item video" data-src="videos/miedos.mp4">miedos</div>
-  <div class="item video" data-src="videos/tranqui.mp4">tranqui</div>
+  <div class="item video" data-src="videos/gosar.mp4">gosar</div>
+  <div class="item video" data-src="videos/mienergia.mp4">mienergia</div>
+  <div class="item video" data-src="videos/camino.mp4">camino</div>
+  <div class="item video" data-src="videos/laultima.mp4">laultima</div>
 </aside>
 
 <!-- PLAYER -->
