--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
+<section id="uru-musica" style="margin-top: 50px; padding: 20px; background-color: #0d0d0d; color: #f2f2f2; font-family: 'Courier New', monospace;">
+  <h2 style="text-align:center; font-size: 2em;">Final ceremonial: URU MÚSICA</h2>
+  <p style="text-align:center; font-style:italic;">Las últimas notas se disuelven en el aire como luciérnagas rituales…</p>
+  <iframe src="https://urumusic.my.canva.site/" width="100%" height="600" style="border:none; box-shadow: 0 0 20px #ff00ff;"></iframe>
+</section>
 
 <body>
 
