--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
 
 <header>URU</header>
-<iframe src="https://urumusic.my.canva.site/" width="100%" height="600" style="border:none;"></iframe>
-<div class="app">
+
+  <section id="uru-musica" style="margin:40px 0; text-align:center;">
+  <h2 style="font-family:'Courier New', monospace; color:#fff;">URU MÚSICA · SEÑALES QUE VIBRAN</h2>
+  <img src="img/uru-musica.jpeg" alt="URU MÚSICA" style="width:100%; max-width:900px; height:auto; box-shadow: 0 0 20px #ff00ff;">
+</section>
+
+  <div class="app">
 
 <!-- CANCIONES -->
 <aside class="sidebar">
