--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <header>URU</header>
 
-  <section id="uru-musica" style="margin:40px 0; text-align:center;">
+ <section id="uru-musica" style="margin:40px 0; text-align:center;">
   <h2 style="font-family:'Courier New', monospace; color:#fff;">URU MÚSICA · SEÑALES QUE VIBRAN</h2>
-  <img src="img/uru-musica.jpeg" alt="URU MÚSICA" style="width:100%; max-width:900px; height:auto; box-shadow: 0 0 20px #ff00ff;">
+  <img src="img/urumusica..png" alt="URU MÚSICA" style="width:100%; max-width:900px; height:auto; box-shadow: 0 0 20px #ff00ff;">
 </section>
+
 
   <div class="app">
 
