--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <header>URU</header>
 
- <section id="uru-musica" style="text-align:center; margin:40px 0;">
+<section id="uru-musica" style="margin:40px 0; text-align:center;">
   <h2 style="font-family:'Courier New', monospace; color:#fff;">URU MÚSICA · SEÑALES QUE VIBRAN</h2>
-  <img src="img/urumusica.png" alt="URUMUSICA" style="width:100%; max-width:900px; height:auto; box-shadow: 0 0 20px #ff00ff;">
+  <img src="img/urumusica..png" alt="URU MÚSICA" style="width:100%; max-width:900px; height:auto; box-shadow: 0 0 20px #ff00ff;">
 </section>
 
 
