--- a/index.html
+++ b/index.html
@@ -4,7 +4,177 @@
 <meta charset="utf-8">
 <title>URU Truenos y Cantos· Portal</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+
+<style>
+:root{
+  --bg:#000;
+  --panel:#0f0f0f;
+  --card:#1c1c1c;
+  --text:#eaeaea;
+  --muted:#9a9a9a;
+  --accent:#1db954;
+}
+
+*{box-sizing:border-box}
+
+body{
+  margin:0;
+  font-family:system-ui,Segoe UI,Roboto;
+  background:var(--bg);
+  color:var(--text);
+}
+
+/* HEADER */
+header{
+  padding:14px;
+  text-align:center;
+  font-weight:600;
+  letter-spacing:2px;
+  border-bottom:1px solid #111;
+}
+
+/* LAYOUT */
+.app{
+  display:grid;
+  grid-template-columns:260px 1fr 320px;
+  height:calc(100vh - 52px);
+}
+
+/* SIDEBAR */
+.sidebar{
+  background:var(--panel);
+  border-right:1px solid #111;
+  overflow-y:auto;
+}
+
+.section{
+  padding:10px 14px;
+  font-size:.7rem;
+  color:var(--muted);
+  letter-spacing:1px;
+}
+
+.item{
+  padding:10px 14px;
+  cursor:pointer;
+  font-size:.85rem;
+  color:#ddd;
+  transition:.2s;
+}
+
+.item:hover,
+.item.active{
+  background:#1a1a1a;
+  color:#fff;
+}
+
+/* PLAYER */
+.player{
+  display:flex;
+  flex-direction:column;
+}
+
+.stage{
+  flex:1;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:#000;
+}
+
+video{max-width:50%;max-height:50%}
+audio{width:90%}
+
+.info{
+  padding:10px 14px;
+  border-top:1px solid #111;
+  font-size:.85rem;
+}
+
+/* MENSAJES */
+.soul{
+  background:#050505;
+  border-left:1px solid #111;
+  padding:18px;
+  display:flex;
+  flex-direction:column;
+  gap:16px;
+  overflow-y:auto;
+}
+
+.soul img{
+  width:100%;
+  max-width:220px;
+  align-self:center;
+}
+
+.poem{
+  font-size:.85rem;
+  line-height:1.6;
+  color:#cfcfcf;
+  font-style:italic;
+}
+
+.poem span{color:var(--accent)}
+
+/* RADIO */
+.radio{
+  margin-top:auto;
+  padding-top:12px;
+  border-top:1px solid #111;
+}
+
+.radio a{
+  display:block;
+  text-align:center;
+  padding:10px;
+  border-radius:999px;
+  background:#111;
+  color:#fff;
+  text-decoration:none;
+  font-size:.85rem;
+}
+
+.radio a:hover{
+  background:var(--accent);
+  color:#000;
+}
+
+/* MODO CINE */
+.cinema .sidebar,
+.cinema .soul{
+  display:none;
+}
+
+.cinema .app{
+  grid-template-columns:1fr;
+}
+
+/* MOBILE */
+@media(max-width:1000px){
+  .app{
+    grid-template-columns:1fr;
+    grid-template-rows:auto auto auto;
+    height:auto;
+  }
+
+  .sidebar{
+    display:block;
+    border-right:none;
+    border-bottom:1px solid #111;
+  }
+
+  .player{
+    min-height:60vh;
+  }
+
+  .soul{
+    display:block;
+    border-left:none;
+    border-top:1px solid #111;
+  }
+}
+</style>
 </head>
   
 <body>
@@ -16,9 +186,7 @@
   <img src="img/urumusica.png" alt="URU MÚSICA" style="width:100%; max-width:900px; height:auto; box-shadow: 0 0 20px #ff00ff;">
 </section>
 
-
-
-  <div class="app">
+<div class="app">
 
 <!-- CANCIONES -->
 <aside class="sidebar">
@@ -126,31 +294,3 @@ function playIndex(i){
   const name=item.textContent.trim();
 
   if(currentType==='audio'){
-    stage.innerHTML=`<audio src="${src}" controls autoplay></audio>`;
-    info.textContent="🎵 "+name;
-  }else{
-    stage.innerHTML=`<video src="${src}" controls autoplay></video>`;
-    info.textContent="🎥 "+name;
-  }
-
-  const media=stage.querySelector('audio,video');
-  media.onended=autoNext;
-}
-
-function autoNext(){
-  for(let i=currentIndex+1;i<items.length;i++){
-    if(items[i].classList.contains(currentType)){
-      playIndex(i);
-      return;
-    }
-  }
-}
-
-items.forEach((item,i)=>{
-  item.onclick=()=>playIndex(i);
-});
-</script>
-
-</body>
-</html>
-
