--- a/index.html
+++ b/index.html
@@ -180,7 +180,12 @@ audio{width:90%}
 <body>
 
 <header>URU</header>
-
+<div style="text-align:center; margin:40px 0;">
+  <a href="https://urumusic.my.canva.site" target="_blank"
+     style="padding:12px 20px; background:#111; color:#fff; border-radius:999px; text-decoration:none; font-size:1rem;">
+    ✨ Ver diseño ritual en Canva
+  </a>
+</div>
 
 <div class="app">
 
