--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ audio{width:90%}
 <div style="text-align:center; margin:40px 0;">
   <a href="https://urumusic.my.canva.site" target="_blank"
      style="padding:12px 20px; background:#111; color:#fff; border-radius:999px; text-decoration:none; font-size:1rem;">
-    ✨ Ver diseño ritual en Canva
+    ✨ entra  a NATY producciones!
   </a>
 </div>
 
